5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1756_1576.log
== TEST (2019-05-22 14:40:04) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
v1 = array(eval(input("Insira a sequencia: ", dtype=int)))
#Sequencia d ejogadas de Barsanulfo
v2 =  array(eval(input("Insira a sequencia: ", dtype=int)))
print(v1)
i = 0
ve = 0
vb = 0
while(i < v1):
	if()

-- ERROR:
File "XXXX", line 11
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:40:06) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
v1 = array(eval(input("Insira a sequencia: ", dtype=int)))
#Sequencia d ejogadas de Barsanulfo
v2 =  array(eval(input("Insira a sequencia: ", dtype=int)))
print(v1)
i = 0
ve = 0
vb = 0
while(i < v1):
	if()

-- ERROR:
File "XXXX", line 11
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:40:06) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
v1 = array(eval(input("Insira a sequencia: ", dtype=int)))
#Sequencia d ejogadas de Barsanulfo
v2 =  array(eval(input("Insira a sequencia: ", dtype=int)))
print(v1)
i = 0
ve = 0
vb = 0
while(i < v1):
	if()

-- ERROR:
File "XXXX", line 11
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:40:07) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
v1 = array(eval(input("Insira a sequencia: ", dtype=int)))
#Sequencia d ejogadas de Barsanulfo
v2 =  array(eval(input("Insira a sequencia: ", dtype=int)))
print(v1)
i = 0
ve = 0
vb = 0
while(i < v1):
	if()

-- ERROR:
File "XXXX", line 11
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:40:10) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
v1 = array(eval(input("Insira a sequencia: ", dtype=int)))
#Sequencia d ejogadas de Barsanulfo
v2 =  array(eval(input("Insira a sequencia: ", dtype=int)))
print(v1)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:57:33) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
vet1 = array(eval(input("Insira a sequencia: ")))
v1 = (vet1, dtype=int)
#Sequencia d ejogadas de Barsanulfo
vet2 =  array(eval(input("Insira a sequencia: ")))
v2 = (vet2, dtype=int)

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1 > v2):
		ve = ve + 1
	else(v1 < v2):
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
File "XXXX", line 4
    v1 = (vet1, dtype=int)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:57:40) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
vet1 = array(eval(input("Insira a sequencia: ")))
v1 = (vet1, dtype=int)
#Sequencia d ejogadas de Barsanulfo
vet2 =  array(eval(input("Insira a sequencia: ")))
v2 = (vet2, dtype=int)

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1 > v2):
		ve = ve + 1
	else(v1 < v2):
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
File "XXXX", line 4
    v1 = (vet1, dtype=int)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:57:41) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
vet1 = array(eval(input("Insira a sequencia: ")))
v1 = (vet1, dtype=int)
#Sequencia d ejogadas de Barsanulfo
vet2 =  array(eval(input("Insira a sequencia: ")))
v2 = (vet2, dtype=int)

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1 > v2):
		ve = ve + 1
	else(v1 < v2):
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
File "XXXX", line 4
    v1 = (vet1, dtype=int)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:57:42) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
vet1 = array(eval(input("Insira a sequencia: ")))
v1 = (vet1, dtype=int)
#Sequencia d ejogadas de Barsanulfo
vet2 =  array(eval(input("Insira a sequencia: ")))
v2 = (vet2, dtype=int)

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1 > v2):
		ve = ve + 1
	else(v1 < v2):
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
File "XXXX", line 4
    v1 = (vet1, dtype=int)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:57:42) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
vet1 = array(eval(input("Insira a sequencia: ")))
v1 = (vet1, dtype=int)
#Sequencia d ejogadas de Barsanulfo
vet2 =  array(eval(input("Insira a sequencia: ")))
v2 = (vet2, dtype=int)

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1 > v2):
		ve = ve + 1
	else(v1 < v2):
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
File "XXXX", line 4
    v1 = (vet1, dtype=int)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:57:42) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
vet1 = array(eval(input("Insira a sequencia: ")))
v1 = (vet1, dtype=int)
#Sequencia d ejogadas de Barsanulfo
vet2 =  array(eval(input("Insira a sequencia: ")))
v2 = (vet2, dtype=int)

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1 > v2):
		ve = ve + 1
	else(v1 < v2):
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
File "XXXX", line 4
    v1 = (vet1, dtype=int)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:57:43) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
vet1 = array(eval(input("Insira a sequencia: ")))
v1 = (vet1, dtype=int)
#Sequencia d ejogadas de Barsanulfo
vet2 =  array(eval(input("Insira a sequencia: ")))
v2 = (vet2, dtype=int)

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1 > v2):
		ve = ve + 1
	else(v1 < v2):
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
File "XXXX", line 4
    v1 = (vet1, dtype=int)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:57:44) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
vet1 = array(eval(input("Insira a sequencia: ")))
v1 = (vet1, dtype=int)
#Sequencia d ejogadas de Barsanulfo
vet2 =  array(eval(input("Insira a sequencia: ")))
v2 = (vet2, dtype=int)

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1 > v2):
		ve = ve + 1
	else(v1 < v2):
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
File "XXXX", line 4
    v1 = (vet1, dtype=int)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:57:44) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
vet1 = array(eval(input("Insira a sequencia: ")))
v1 = (vet1, dtype=int)
#Sequencia d ejogadas de Barsanulfo
vet2 =  array(eval(input("Insira a sequencia: ")))
v2 = (vet2, dtype=int)

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1 > v2):
		ve = ve + 1
	else(v1 < v2):
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
File "XXXX", line 4
    v1 = (vet1, dtype=int)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:57:44) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
vet1 = array(eval(input("Insira a sequencia: ")))
v1 = (vet1, dtype=int)
#Sequencia d ejogadas de Barsanulfo
vet2 =  array(eval(input("Insira a sequencia: ")))
v2 = (vet2, dtype=int)

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1 > v2):
		ve = ve + 1
	else(v1 < v2):
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
File "XXXX", line 4
    v1 = (vet1, dtype=int)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:57:45) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
vet1 = array(eval(input("Insira a sequencia: ")))
v1 = (vet1, dtype=int)
#Sequencia d ejogadas de Barsanulfo
vet2 =  array(eval(input("Insira a sequencia: ")))
v2 = (vet2, dtype=int)

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1 > v2):
		ve = ve + 1
	else(v1 < v2):
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
File "XXXX", line 4
    v1 = (vet1, dtype=int)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:57:45) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
vet1 = array(eval(input("Insira a sequencia: ")))
v1 = (vet1, dtype=int)
#Sequencia d ejogadas de Barsanulfo
vet2 =  array(eval(input("Insira a sequencia: ")))
v2 = (vet2, dtype=int)

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1 > v2):
		ve = ve + 1
	else(v1 < v2):
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
File "XXXX", line 4
    v1 = (vet1, dtype=int)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:57:46) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
vet1 = array(eval(input("Insira a sequencia: ")))
v1 = (vet1, dtype=int)
#Sequencia d ejogadas de Barsanulfo
vet2 =  array(eval(input("Insira a sequencia: ")))
v2 = (vet2, dtype=int)

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1 > v2):
		ve = ve + 1
	else(v1 < v2):
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
File "XXXX", line 4
    v1 = (vet1, dtype=int)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:57:54) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
vet1 = array(eval(input("Insira a sequencia: ")))

#Sequencia d ejogadas de Barsanulfo
vet2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1 > v2):
		ve = ve + 1
	else(v1 < v2):
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
File "XXXX", line 14
    else(v1 < v2):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:57:55) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
vet1 = array(eval(input("Insira a sequencia: ")))

#Sequencia d ejogadas de Barsanulfo
vet2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1 > v2):
		ve = ve + 1
	else(v1 < v2):
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
File "XXXX", line 14
    else(v1 < v2):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:57:56) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
vet1 = array(eval(input("Insira a sequencia: ")))

#Sequencia d ejogadas de Barsanulfo
vet2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1 > v2):
		ve = ve + 1
	else(v1 < v2):
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
File "XXXX", line 14
    else(v1 < v2):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:57:56) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
vet1 = array(eval(input("Insira a sequencia: ")))

#Sequencia d ejogadas de Barsanulfo
vet2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1 > v2):
		ve = ve + 1
	else(v1 < v2):
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
File "XXXX", line 14
    else(v1 < v2):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:57:57) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
vet1 = array(eval(input("Insira a sequencia: ")))

#Sequencia d ejogadas de Barsanulfo
vet2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1 > v2):
		ve = ve + 1
	else(v1 < v2):
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
File "XXXX", line 14
    else(v1 < v2):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:58:21) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
vet1 = array(eval(input("Insira a sequencia: ")))

#Sequencia d ejogadas de Barsanulfo
vet2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1 > v2):
		ve = ve + 1
	else:
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:58:49) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
vet1 = array(eval(input("Insira a sequencia: ")))

#Sequencia d ejogadas de Barsanulfo
vet2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0
while(i < v1):
	if(v1 > v2):
		ve = ve + 1
	else:
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:59:19) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
v1 = array(eval(input("Insira a sequencia: ")))

#Sequencia d ejogadas de Barsanulfo
v2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0
while(i < v1):
	if(v1 > v2):
		ve = ve + 1
	else:
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:59:33) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
v1 = array(eval(input("Insira a sequencia: ")))

#Sequencia d ejogadas de Barsanulfo
v2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1 > v2):
		ve = ve + 1
	else:
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:01:24) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
v1 = array(eval(input("Insira a sequencia: ")))

#Sequencia d ejogadas de Barsanulfo
v2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1[i] > v2[i]):
		ve = ve + 1
	else:
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:02:34) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
v1 = array(eval(input("Insira a sequencia: ")))

#Sequencia d ejogadas de Barsanulfo
v2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0
while(i < size(v1)):
	if(v1[i] > v2[i]):
		ve = ve + 1
	else:
		vb = vb + 1
	i = i + 1
if(ve > vb):
	print("EUSAPIA")
elif(ve == vb):
	print("EMPATE")
else:
	print("BARSANULFO")
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:37:23) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
v1 = array(eval(input("Insira a sequencia: ")))

#Sequencia dejogadas de Barsanulfo
v2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0

while(i < size(v1)):
	if(((v1== 22) and (v2==33)) or ((v1==22) and (v2==11)) or ((v1==33) and (v2==22))):
		ve = ve + 1
	elif((((v2==11) and (v1==33)) or ((v2==22) and (v1==11)) or ((v2==33) and (v1==22))):
		  vb = vb + 1
	i = i + 1
			  
if(ve > vb):
	print("EUSAPIA")
elif(ve == vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
File "XXXX", line 15
    elif((((v2==11) and (v1==33)) or ((v2==22) and (v1==11)) or ((v2==33) and (v1==22))):
                                                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:37:44) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
v1 = array(eval(input("Insira a sequencia: ")))

#Sequencia dejogadas de Barsanulfo
v2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0

while(i < size(v1)):
	if(((v1== 22) and (v2==33)) or ((v1==22) and (v2==11)) or ((v1==33) and (v2==22))):
		ve = ve + 1
	elif(((v2==11) and (v1==33)) or ((v2==22) and (v1==11)) or ((v2==33) and (v1==22))):
		  vb = vb + 1
	i = i + 1
			  
if(ve > vb):
	print("EUSAPIA")
elif(ve == vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:38:56) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
v1 = array(eval(input("Insira a sequencia: ")))

#Sequencia dejogadas de Barsanulfo
v2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0

while(i < size(v1)):
	if(((v1[i]== 22) and (v2[i]==33)) or ((v1[i]==22) and (v2[i]==11)) or ((v1[i]==33) and (v2[i]==22))):
		ve = ve + 1
	elif(((v2[i]==11) and (v1[i]==33)) or ((v2[i]==22) and (v1[i]==11)) or ((v2[i]==33) and (v1[i]==22))):
		  vb = vb + 1
	i = i + 1
			  
if(ve > vb):
	print("EUSAPIA")
elif(ve == vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:39:47) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
v1 = array(eval(input("Insira a sequencia: ")))

#Sequencia dejogadas de Barsanulfo
v2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0

while(i < size(v1)):
	if(((v1[i]== 22) and (v2[i]==33)) or ((v1[i]==22) and (v2[i]==11)) or ((v1[i]==33) and (v2[i]==22))):
		ve = ve + 1
	elif(((v2[i]==11) and (v1[i]==33)) or ((v2[i]==22) and (v1[i]==11)) or ((v2[i]==33) and (v1[i]==22))):
		  vb = vb + 1
	i = i + 1
print(i)			  
if(ve > vb):
	print("EUSAPIA")
elif(ve == vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:42:25) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
v1 = array(eval(input("Insira a sequencia: ")))

#Sequencia dejogadas de Barsanulfo
v2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0

while(i < size(v1)):
	if(((v1[i]== 22) and (v2[i]==33)) or ((v1[i]==22) and (v2[i]==11)) or ((v1[i]==33) and (v2[i]==22))):
		ve = ve + 1
	elif(((v2[i]==11) and (v1[i]==33)) or ((v2[i]==22) and (v1[i]==11)) or ((v2[i]==33) and (v1[i]==22))):
		  vb = vb + 1
	else: 
		ve = ve + 0
		vb = vb + 0
	i = i + 1
print(i)			  
if(ve > vb):
	print("EUSAPIA")
elif(ve == vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:45:49) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
v1 = array(eval(input("Insira a sequencia: ")))

#Sequencia dejogadas de Barsanulfo
v2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0

while(i < size(v1)):
	if(((v1[i]== 22) and (v2[i]==33)) or ((v1[i]==22) and (v2[i]==11)) or ((v1[i]==33) and (v2[i]==22))):
		ve = ve + 1
	elif(((v2[i]==11) and (v1[i]==33)) or ((v2[i]==22) and (v1[i]==11)) or ((v2[i]==33) and (v1[i]==22))):
		  vb = vb + 1
	i = i + 1
print(i)			  
if(ve > vb):
	print("EUSAPIA")
elif(ve == vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:46:11) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
v1 = array(eval(input("Insira a sequencia: ")))

#Sequencia dejogadas de Barsanulfo
v2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0

while(i < size(v1)):
	if(((v1[i]== 22) and (v2[i]==33)) or ((v1[i]==22) and (v2[i]==11)) or ((v1[i]==33) and (v2[i]==22))):
		ve = ve + 1
	elif(((v2[i]==11) and (v1[i]==33)) or ((v2[i]==22) and (v1[i]==11)) or ((v2[i]==33) and (v1[i]==22))):
		 vb = vb + 1
	i = i + 1
print(i)			  
if(ve > vb):
	print("EUSAPIA")
elif(ve == vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:46:44) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
v1 = array(eval(input("Insira a sequencia: ")))

#Sequencia dejogadas de Barsanulfo
v2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0

while(i < size(v1)):
	if(((v1[i]== 22) and (v2[i]==33)) or ((v1[i]==22) and (v2[i]==11)) or ((v1[i]==33) and (v2[i]==22))):
		ve = ve + 1
	elif(((v2[i]==11) and (v1[i]==33)) or ((v2[i]==22) and (v1[i]==11)) or ((v2[i]==33) and (v1[i]==22))):
		 vb = vb + 1
	i = i + 1
print(i)			  
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:50:27) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
v1 = array(eval(input("Insira a sequencia: ")))

#Sequencia dejogadas de Barsanulfo
v2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0

while(i < size(v1)):
	if(((v1[i]== 11) and (v2[i]==33)) or ((v1[i]==22) and (v2[i]==11)) or ((v1[i]==33) and (v2[i]==22))):
		ve = ve + 1
	elif(((v2[i]==11) and (v1[i]==33)) or ((v2[i]==22) and (v1[i]==11)) or ((v2[i]==33) and (v1[i]==22))):
		 vb = vb + 1
	i = i + 1
print(i)			  
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:50:40) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
v1 = array(eval(input("Insira a sequencia: ")))

#Sequencia dejogadas de Barsanulfo
v2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0

while(i < size(v1)):
	if(((v1[i]== 11) and (v2[i]==33)) or ((v1[i]==22) and (v2[i]==11)) or ((v1[i]==33) and (v2[i]==22))):
		ve = ve + 1
	elif(((v2[i]==11) and (v1[i]==33)) or ((v2[i]==22) and (v1[i]==11)) or ((v2[i]==33) and (v1[i]==22))):
		 vb = vb + 1
	i = i + 1
print(i)			  
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:50:43) 
-- CODE:
from numpy import*
#Sequencia de jogadas de Eusápia
v1 = array(eval(input("Insira a sequencia: ")))

#Sequencia dejogadas de Barsanulfo
v2 =  array(eval(input("Insira a sequencia: ")))

i = 0
ve = 0
vb = 0

while(i < size(v1)):
	if(((v1[i]== 11) and (v2[i]==33)) or ((v1[i]==22) and (v2[i]==11)) or ((v1[i]==33) and (v2[i]==22))):
		ve = ve + 1
	elif(((v2[i]==11) and (v1[i]==33)) or ((v2[i]==22) and (v1[i]==11)) or ((v2[i]==33) and (v1[i]==22))):
		 vb = vb + 1
	i = i + 1
print(i)			  
if(ve > vb):
	print("EUSAPIA")
elif(ve < vb):
	print("BARSANULFO")
elif(ve == vb):
	print("EMPATE")
		

-- EXECUTION TIME:
0.599942
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
